--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/poolorbit
 DATABASE_SSL=false
 PORT=4000
+RPC_URL=
+WS_RPC_URL=
+FACTORY_ADDRESS=
+START_BLOCK=
+RELAYER_PRIVATE_KEY=
+USDT_ADDRESS=
+USDC_ADDRESS=
