--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
     "indexer:run": "node src/indexer/run.js",
-    "migrate": "node scripts/migrate.js"
+    "migrate": "node scripts/migrate.js",
+    "reset:pools": "node scripts/reset-pools.js"
   },
   "keywords": [
     "express",
